# Ransomware-CPP

./: CMakeLists.txt  LICENSE  README.md  aes256.cpp  decrypt.cpp  encrypt.cpp  index.html  keygen.cpp  launcher.cpp  resources.rc  rsa.cpp  rsaproj.cpp  save.php
